[gd_scene load_steps=24 format=3 uid="uid://cf0nxgp7cvdba"]

[ext_resource type="Script" uid="uid://bt7aeqey83dpw" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="Theme" uid="uid://d1ts7kas1ofut" path="res://assets/themes/button_text_theme.tres" id="1_n87rw"]
[ext_resource type="FontFile" uid="uid://45ftonyxd42m" path="res://assets/fonts/YeastyFlavorsRegular.ttf" id="2_88e76"]
[ext_resource type="Texture2D" uid="uid://cymrakixv4un5" path="res://assets/styles/panels/settings_background.png" id="4_71k7c"]
[ext_resource type="Texture2D" uid="uid://c5uf8bxj3mcir" path="res://assets/sprites/Icons/music_icon.png" id="4_knqa7"]
[ext_resource type="LabelSettings" uid="uid://br2rr3gvloa36" path="res://assets/styles/labels/default_text_style.tres" id="4_v4r4p"]
[ext_resource type="Theme" uid="uid://25syfjgemjex" path="res://assets/styles/sliders/fish_slider.tres" id="5_7l7mv"]
[ext_resource type="Texture2D" uid="uid://cdgybt5f12sxs" path="res://assets/sprites/Icons/fx_icon.png" id="6_71k7c"]
[ext_resource type="AudioStream" uid="uid://e6uk7dmj6r11" path="res://sounds/pause-and-upgrade-theme.mp3" id="6_v4r4p"]

[sub_resource type="LabelSettings" id="LabelSettings_cmnsq"]
font = ExtResource("2_88e76")
font_size = 126
font_color = Color(0.87451, 0.87451, 0.87451, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1rgno"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_myx47"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kukqi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5d2l8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7l7mv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v4r4p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1s2dm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_88e76"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_knqa7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cmnsq"]
texture = ExtResource("4_71k7c")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_71k7c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cmnsq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ofnjo"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_myx47")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.145098, 0.145098, 0.733333)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -138.0
offset_top = -117.0
offset_right = 142.0
offset_bottom = 574.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PauseLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Pause"
label_settings = SubResource("LabelSettings_cmnsq")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 65
theme_override_styles/separator = SubResource("StyleBoxEmpty_1rgno")

[node name="Button_Continue" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme = ExtResource("1_n87rw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_myx47")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kukqi")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_5d2l8")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_7l7mv")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_v4r4p")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1s2dm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_88e76")
theme_override_styles/normal = SubResource("StyleBoxEmpty_knqa7")
text = "Continue"

[node name="Button_MainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme = ExtResource("1_n87rw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_myx47")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kukqi")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_5d2l8")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_7l7mv")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_v4r4p")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1s2dm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_88e76")
theme_override_styles/normal = SubResource("StyleBoxEmpty_knqa7")
text = "Main Menu"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_1rgno")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 400

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_cmnsq")

[node name="PanelContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_knqa7")
expand_mode = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Music"
label_settings = ExtResource("4_v4r4p")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_71k7c")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_71k7c")
expand_mode = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "SFX"
label_settings = ExtResource("4_v4r4p")
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slider_Music" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("5_7l7mv")
theme_type_variation = &"slider"
max_value = 1.0
step = 0.01
value = 1.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_cmnsq")

[node name="Slider_SFX" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("5_7l7mv")
max_value = 1.0
step = 0.01
value = 1.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 260
theme_override_styles/separator = SubResource("StyleBoxEmpty_ofnjo")

[node name="PauseMenuTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_v4r4p")
volume_db = -20.0
autoplay = true
bus = &"BGM"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button_Continue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button_MainMenu" to="." method="_on_button_main_menu_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Slider_Music" to="." method="_on_slider_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MarginContainer2/Panel/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Slider_SFX" to="." method="_on_slider_sfx_value_changed"]
